company dashboard issue fix and add globle search
