# src/swagger/swagger-output.json
@@ -5,14 +5,16 @@
     "description": "API documentation for the application.",
     "version": "1.0.0"
   },
-  "host": "localhost:5001",
+  "host": [
+    "localhost:3031"
+  ],
   "servers": [
     {
-      "url": "http://localhost:5001",
+      "url": "http://localhost:3101",
       "description": "Local base url"
     },
     {
-      "url": "http://http://192.168.1.180:3101",
+      "url": "http://192.168.1.180:3101",
       "description": "Live base url"
     }
   ],
@@ -40,6 +42,22 @@
     "application/json"
   ],
   "paths": {
+    "/company/category-id": {
+      "get": {
+        "tags": [
+          "Company"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/company/category-list": {
       "get": {
         "tags": [
